--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "socket.io": "^4.5.4"
   }
 }
