--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "typescript": "^4.9.4"
   }
 }
